testsuite/tests/typing-warnings/pr6872.compilers.principal.reference
- : unit = ()
exception A
type a = A
Line 2, characters 0-1:
  A;;
  ^
Warning 41: A belongs to several types: a exn
The first one was selected. Please disambiguate if this is wrong.
- : a = A
Line 1, characters 6-7:
  raise A;;
        ^
Warning 42: this use of A relies on type-directed disambiguation,
it will not compile with OCaml 4.00 or earlier.
Exception: A.
- : a -> unit = <fun>
Line 1, characters 26-27:
  function Not_found -> 1 | A -> 2 | _ -> 3;;
                            ^
Warning 41: A belongs to several types: a exn
The first one was selected. Please disambiguate if this is wrong.
Line 1, characters 26-27:
  function Not_found -> 1 | A -> 2 | _ -> 3;;
                            ^
Error: This pattern matches values of type a
       but a pattern was expected which matches values of type exn
Line 1, characters 10-11:
  try raise A with A -> 2;;
            ^
Warning 42: this use of A relies on type-directed disambiguation,
it will not compile with OCaml 4.00 or earlier.
Line 1, characters 17-18:
  try raise A with A -> 2;;
                   ^
Warning 42: this use of A relies on type-directed disambiguation,
it will not compile with OCaml 4.00 or earlier.
- : int = 2

